# third_party_cangjie_tools

./: .gitignore  OAT.xml  README.OpenSource  README.md  README_zh.md  bundle.json
cangjie-language-server/: .clang-format  .gitignore  CMakeLists.txt
cangjie-language-server/doc/: developer_guide.md  developer_guide_EN.md  developer_guide_zh.md  user_guide.md  user_guide_EN.md  user_guide_zh.md
cangjie-language-server/generate/: index.fbs
cangjie-language-server/src/: CMakeLists.txt
cangjie-language-server/src/json-rpc/: CMakeLists.txt  Common.h  CompletionType.h  Protocol.cpp  Protocol.h  ProtocolContent.h  StdioTransport.cpp  StdioTransport.h  Transport.h  URI.cpp  URI.h  WorkSpaceSymbolType.cpp  WorkSpaceSymbolType.h
cangjie-language-server/src/languageserver/: ArkAST.cpp  ArkAST.h  ArkASTWorker.cpp  ArkASTWorker.h  ArkLanguageServer.cpp  ArkLanguageServer.h  ArkScheduler.cpp  ArkScheduler.h  ArkServer.cpp  ArkServer.h  ArkThreading.cpp  ArkThreading.h  CMakeLists.txt  CjoManager.h  CompilerCangjieProject.cpp  CompilerCangjieProject.h  DependencyGraph.h  DocCache.cpp  DocCache.h  LSPCompilerInstance.cpp  LSPCompilerInstance.h  Options.h  ThrdPool.h
cangjie-language-server/src/languageserver/common/: BasicHelper.cpp  BasicHelper.h  Callbacks.h  Constants.h  FileStore.cpp  FileStore.h  FindDeclUsage.cpp  FindDeclUsage.h  ItemResolverUtil.cpp  ItemResolverUtil.h  PositionResolver.cpp  PositionResolver.h  SyscapCheck.cpp  SyscapCheck.h  Utils.cpp  Utils.h
cangjie-language-server/src/languageserver/index/: BackgroundIndexDB.cpp  BackgroundIndexDB.h  CallRelation.h  CjdIndex.cpp  CjdIndex.h  IndexDatabase.cpp  IndexDatabase.h  IndexStorage.cpp  IndexStorage.h  MemIndex.cpp  MemIndex.h  Ref.h  Relation.h  Symbol.h  SymbolCollector.cpp  SymbolCollector.h  ThreadMemoize.cpp  ThreadMemoize.h  Tokenizer.cpp  Tokenizer.h
cangjie-language-server/src/languageserver/logger/: CrashReporter.cpp  CrashReporter.h  Logger.cpp  Logger.h
cangjie-language-server/src/launcher/: main.cpp
cangjie-language-server/test/: CMakeLists.txt  auto_fix_test.py  main.cpp  testCase.list
cangjie-language-server/test/apiTest/: CMakeLists.txt  UtilTest.cpp
cangjie-language-server/test/common/: CMakeLists.txt  TestUtils.cpp  common.cpp
cangjie-language-server/test/include/: SingleInstance.h  TestUtils.h  common.h
cangjie-language-server/test/unitTests/: CMakeLists.txt
cjfmt/: CMakeLists.txt
cjfmt/config/: cangjie-format.toml
cjfmt/doc/: developer_guide.md  developer_guide_EN.md  developer_guide_zh.md  user_guide_EN.md  user_guide_zh.md
cjfmt/include/Format/: ASTToFormatSource.h  CommentHandler.h  Doc.h  FormatCodeProcessor.h  SimultaneousIterator.h  TomlParser.h
cjfmt/src/: CMakeLists.txt  main.cpp
cjfmt/src/Format/: ASTToFormatSource.cpp  CMakeLists.txt  CommentHandler.cpp  FormatCodeProcessor.cpp  OptionContext.cpp  SimultaneousIterator.cpp  TomlParser.cpp
cjhead/: CMakeLists.txt
cjhead/config/: config.ini
cjhead/doc/: developer_guide.md  user_guide.md
cjhead/fmt/: .clang-format  CMakeLists.txt
cjhead/include/: CJHeadCompilerInstance.h  CJHeadCompilerInvocation.h  CJHeadParam.h  CJHeadUtil.h  FileHandler.h  HeadFileVisitor.h
cjhead/src/: CJHeadCompilerInstance.cpp  CJHeadCompilerInvocation.cpp  CJHeadUtil.cpp  CMakeLists.txt  FileHandler.cpp  HeadFileVisitor.cpp  main.cpp
cjlint/: CMakeLists.txt
cjlint/config/: CMakeLists.txt  cjlint_rule_list.json  dataflow_rule_G_CHK_03.json  dataflow_rule_G_OTH_01.json  exclude_lists.json  structural_rule_G_CHK_02.json  structural_rule_G_CHK_04.json  structural_rule_G_ERR_02.json  structural_rule_G_FIO_02.json  structural_rule_G_OTH_02.json  structural_rule_G_OTH_03.json  structural_rule_G_OTH_04.json  structural_rule_G_SEC_01.json  structural_rule_G_SER_01.json  structural_rule_G_SYN_01.json  structural_rule_P_03.json
cjlint/doc/: developer_guide_zh.md  user_guide_zh.md
cjlint/src/: CMakeLists.txt  Cjlint.cpp  Cjlint.h  main.cpp
cjlint/src/checker/: CMakeLists.txt  Checker.cpp  Checker.h
cjlint/src/common/: CJLintCompilerInstance.cpp  CJLintCompilerInstance.h  CJLintCompilerInvocation.cpp  CJLintCompilerInvocation.h  CMakeLists.txt  CommonData.h  CommonFunc.cpp  CommonFunc.h  ConfigContext.cpp  ConfigContext.h  DiagnosticEngine.cpp  DiagnosticEngine.h  DiagnosticsAll.def  ExcludeRule.cpp  ExcludeRule.h  TaintData.h
cjlint/src/rules/: CMakeLists.txt  Rule.h
cjpm/cpp/: CMakeLists.txt  cross-windows-toolchain.cmake  llvm-mingw-toolchain.cmake
cjpm/cpp/src/: fswatcher.cpp
cjprof/: .gitignore  CMakeLists.txt
cjprof/bridge/jni/: CMakeLists.txt  build.py
cjprof/doc/: COPYRIGHT  COPYRIGHT_EN  developer_guide.md  developer_guide_zh.md  user_guide.md  user_guide_zh.md
cjprof/include/: Cjprof.h
cjprof/include/Analyzer/: DatabaseCache.h  HeapAnalyzer.h  HttpContext.h  HttpHandlers.h  HttpServer.h  Logger.h  Types.h
cjprof/include/Commands/: Command.h  Heap.h  Record.h  Report.h
cjprof/include/Data/: Hprof.h  HprofData.h  HprofParser.h  ObjectCategory.h
cjprof/include/Recorder/: LinuxRecorder.h  Recorder.h
cjprof/include/Reporter/: FlameGraph.h  FlatReporter.h  Reporter.h
cjprof/include/Symbol/: Elf.h  Symbol.h
cjprof/include/Utility/: Singleton.h
cjprof/src/: CMakeLists.txt  Cjprof.cpp  main.cpp
cjprof/src/Analyzer/: CMakeLists.txt  DatabaseCache.cpp  HeapAnalyzer.cpp  HttpHandlers.cpp  HttpServer.cpp
cjprof/src/Commands/: CMakeLists.txt  Heap.cpp  HeapCtor.cpp  Record.cpp  Report.cpp
cjprof/src/Data/: CMakeLists.txt  Hprof.cpp  HprofParser.cpp
cjprof/src/Recorder/: CMakeLists.txt  LinuxRecorder.cpp
cjprof/src/Reporter/: CMakeLists.txt  FlameGraph.cpp  FlatReporter.cpp
cjprof/src/Symbol/: CMakeLists.txt  Elf.cpp
cjprof/static/html/: index.html
cjtrace-recover/: .gitignore  CMakeLists.txt
cjtrace-recover/cmake/: mingw_x86_64_toolchain.cmake
cjtrace-recover/cmake/modules/: CangjieTarget.cmake
cjtrace-recover/doc/: developer_guide_zh.md
cjtrace-recover/src/: cjtrace-recover.cj
cjtrace-recover/src/native/: DemangleWrapper.cpp
(+4767 files in other folders)
